# lot-manager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  run_clang_tidy.sh
docs/: README.md  database_schema  models.uxf  software_requirement_specification.fr.md  software_requirement_specification.md
docs/database/: database_schema  inventory_query.sql  lot_space_full_query.sql  vehicle_query.sql
docs/uml/: actors.uxf  cache.uxf  db.uxf  models.uxf  sequences.uxf
src/: main.cpp
